# NBFC-Plasmoid

./: CMakeLists.txt  Messages.sh
src/: .omenctl.cpp.kate-swp  CMakeLists.txt  mythread.h  omenctl.cpp  omenctl.h  roothelper.cpp  roothelper.h  setgovernor.txt
src/package/: metadata.json
src/package/contents/ui/: main.qml
